Correção da margem do html

--- a/index.html
+++ b/index.html
@@ -39,8 +39,6 @@
             </ul>
         </section>
     </main>
-    <footer>
-        &copy; Copyright São Paulo FC 2022
-    </footer>
+    <footer>&copy; Copyright São Paulo FC 2022</footer>
 </body>
 </html>
