Alteração de escrita dos parágrafos

--- a/index.html
+++ b/index.html
@@ -17,11 +17,22 @@
         <h2>Apresentação</h2>
         <section>
             <img class="escudo" src="./imagens/escudo.jpeg" alt="Escudo do São Paulo FC">
-            <p class="historia">O time do São Paulo foi fundado em 25 de janeiro de 1930, o tricolor paulista é um dos clubes mais tradicionais do futebol brasileiro. Dono de vários títulos nacionais e internacionais, o São Paulo tem uma das maiores torcidas do Brasil e também é conhecido por revelar grandes jogadores, como por exemplo: KaKá, Denilson, Rogério Ceni, entre outros.</p>
+            <p class="historia">O time do São Paulo foi fundado em 25 de janeiro de 1930, 
+            o tricolor paulista é um dos clubes mais tradicionais do futebol brasileiro. 
+            Dono de vários títulos nacionais e internacionais, o São Paulo tem uma das maiores 
+            torcidas do Brasil e também é conhecido por revelar grandes jogadores, como por exemplo: 
+            KaKá, Denilson, Rogério Ceni, entre outros.</p>
         </section>
         <h2>Estádio</h2>   
         <section>
-            <p class="estadio">Cicero Pompeu de Toledo, mais conhecido como estádio do Morumbi. O Morumbi é o terceiro maior estádio do Brasil, sendo também o maior estádio do estado de São Paulo e o maior estádio particular do País. Ele foi inaugurado em 2 de outubro de 1960, na ocasião o time do São Paulo venceu o Sporting de Portugal por 1 a 0. O público recorde do Morumbi é de 146082 pessoas numa partida realizada entre Corinthians e Ponte Preta em 9 de outubro de 1977, atualmente a capacidade é de 66795 pessoas. O estádio do Morumbi também recebe shows musicais e outros eventos, já passaram pelo Morumbi vários artistas e bandas mundialmente renomadas, por exemplo: Michael Jackson, Madonna, nirvana. </p>
+            <p class="estadio">Cicero Pompeu de Toledo, mais conhecido como estádio do Morumbi. 
+            O Morumbi é o terceiro maior estádio do Brasil, sendo também o maior estádio do estado 
+            de São Paulo e o maior estádio particular do País. Ele foi inaugurado em 2 de outubro 
+            de 1960, na ocasião o time do São Paulo venceu o Sporting de Portugal por 1 a 0. O público 
+            recorde do Morumbi é de 146082 pessoas numa partida realizada entre Corinthians e Ponte 
+            Preta em 9 de outubro de 1977, atualmente a capacidade é de 66795 pessoas. O estádio do 
+            Morumbi também recebe shows musicais e outros eventos, já passaram pelo Morumbi vários 
+            artistas e bandas mundialmente renomadas, por exemplo: Michael Jackson, Madonna, nirvana.</p>
             <img class="morumbi"src="./imagens/estadio.jpg" alt="Estádio do Morumbi">
         </section>
         <h2>Títulos</h2>
